@@ -57,20 +57,22 @@ function Layout:_GetInnerAndOuterDimensions(gui, data_context)
   local inner_width = 0
   local inner_height = 0
   for i, child in ipairs(self.children) do
-    loop_call(child, data_context, function(child, data_context)
-      local child_width, child_height = child:GetDimensions(gui, data_context)
-      local child_total_width = child_width + child.style.margin_left + child.style.margin_right
-      local child_total_height = child_height + child.style.margin_top + child.style.margin_bottom
-      child_total_width = math.max(child_total_width, child.style.width or 0)
-      child_total_height = math.max(child_total_height, child.style.height or 0)
-      if self.style.direction == "horizontal" then
-        inner_width = inner_width + child_total_width
-        inner_height = math.max(inner_height, child_total_height)
-      else
-        inner_width = math.max(inner_width, child_total_width)
-        inner_height = inner_height + child_total_height
-      end
-    end)
+    if not child.render_if or (child.render_if()) then
+      loop_call(child, data_context, function(child, data_context)
+        local child_width, child_height = child:GetDimensions(gui, data_context)
+        local child_total_width = child_width + child.style.margin_left + child.style.margin_right
+        local child_total_height = child_height + child.style.margin_top + child.style.margin_bottom
+        child_total_width = math.max(child_total_width, child.style.width or 0)
+        child_total_height = math.max(child_total_height, child.style.height or 0)
+        if self.style.direction == "horizontal" then
+          inner_width = inner_width + child_total_width
+          inner_height = math.max(inner_height, child_total_height)
+        else
+          inner_width = math.max(inner_width, child_total_width)
+          inner_height = inner_height + child_total_height
+        end
+      end)
+    end
   end
   local content_width = inner_width
   local content_height = inner_height
@@ -128,24 +130,26 @@ function Layout:Render(gui, new_id, data_context, layout)
   self.next_element_x = x
   self.next_element_y = y
   for i, child in ipairs(self.children) do
-    loop_call(child, data_context, function(child, data_context)
-      local child_width, child_height = child:GetDimensions(gui, data_context)
-      local child_total_width = child_width + child.style.margin_left + child.style.margin_right
-      local child_total_height = child_height + child.style.margin_top + child.style.margin_bottom
-      child_total_width = math.max(child_total_width, child.style.width or 0)
-      child_total_height = math.max(child_total_height, child.style.height or 0)
-      if self.attr.debug then
-        -- Content
-        local x, y = self:GetPositionForWidget(child, child_width, child_height)
-        render_debug_rect(x, y, child_width, child_height, "green")
-      end
-      child:Render(gui, new_id, data_context, self)
-      if self.style.direction == "horizontal" then
-        self.next_element_x = self.next_element_x + child_total_width
-      else
-        self.next_element_y = self.next_element_y + child_total_height
-      end
-    end)
+    if not child.render_if or (child.render_if()) then
+      loop_call(child, data_context, function(child, data_context)
+        local child_width, child_height = child:GetDimensions(gui, data_context)
+        local child_total_width = child_width + child.style.margin_left + child.style.margin_right
+        local child_total_height = child_height + child.style.margin_top + child.style.margin_bottom
+        child_total_width = math.max(child_total_width, child.style.width or 0)
+        child_total_height = math.max(child_total_height, child.style.height or 0)
+        if self.attr.debug then
+          -- Content
+          local x, y = self:GetPositionForWidget(child, child_width, child_height)
+          render_debug_rect(x, y, child_width, child_height, "green")
+        end
+        child:Render(gui, new_id, data_context, self)
+        if self.style.direction == "horizontal" then
+          self.next_element_x = self.next_element_x + child_total_width
+        else
+          self.next_element_y = self.next_element_y + child_total_height
+        end
+      end)
+    end
   end
   if self.style.background then
     if self.style.border then
